fix(explosion): fix explosion crashing